--- a/sh-front-main/src/assets/styles.modules.css
+++ b/sh-front-main/src/assets/styles.modules.css
@@ -9,16 +9,33 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   border: .5px solid rgb(208, 208, 208);
   border-radius: 5px;
+  
+}
+
+.popover{
+  z-index: 1000;
 }
 
 .suggestions{
   background-color: black;
   color: white;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  z-index: 1000;
 }
 
 .suggestions:hover{
   background-color: rgb(224, 224, 224);
   color: black;
 }
+
+/* @media (max-width: 850px) {
+  .comboboxInput{
+    position: absolute;
+    top: 490px;
+    left: 0;
+  }
+  .suggestions{
+   
+  }
+} */
 
